--- a/style.css
+++ b/style.css
@@ -2,10 +2,30 @@ form {
   display: flex;
   flex-direction: column;
   align-items: center;
+  max-width: 300px;
+  margin: 0 auto;
+}
+
+form > input, form > select, form > textarea {
+  width: 100%;
 }
 
 .mb-3 {
   margin-bottom: 10px;
+}
+
+.mt-0 {
+  margin-top: 0;
+}
+
+.error-msg {
+  color: rgb(241, 77, 77);
+}
+
+.send {
+  padding: 5px 30px;
+  margin-top: 15px;
+  
 }
 
 body {
